Fixes: NB#260183 - Status menu does not become properly pannable when content does not fit
Bug: NB#260183 - Status menu does not become properly pannable when content does not fit
RevBy: Vesa Halttunen

--- a/themes/style/statusindicatormenu.css
+++ b/themes/style/statusindicatormenu.css
@@ -98,6 +98,21 @@ MApplicationExtensionAreaStyle#StatusIndicatorMenuTopRowExtensionArea {
     container-mode: false;
 }
 
+MPannableWidgetStyle#StatusIndicatorMenuViewport {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    minimum-size: -1 -1;
+    preferred-size: -1 -1;
+    maximum-size: -1 -1;
+    background-image: "meegotouch-applicationpage-background";
+}
+
 MContainerStyle#MExtensionAreaInvisibleContainer {
     background-image: ;
 }
